--- a/index.html
+++ b/index.html
@@ -37,4 +37,8 @@
     A cidade é conhecida pelas ruas bem planejadas e longas avenidas.
     O município tem um comércio forte e diversificado, que é impulsionado pelo agronegócio, com a produção de soja, trigo, milho, café e pecuária leiteira.
     Lugar de muitas belezas naturais e paisagens incríveis, onde há conscientização e preservação do meio ambiente.</p>
-    <a href="https://pt-br.facebook.com/colegioidaliarocha/"><button style="background: #c53bd1; border-radius: 6px; padding: 15px; cursor: pointer; color: #ffffff; border: none; font-size: 16px;">Clique Aqui</button></a>
+    <body>
+        <div class="container">
+            <a href="https://pt-br.facebook.com/colegioidaliarocha/"> <p class="animated-word">CLICK</p></a>
+        </div>
+    </body>
